# mc_sample_communication

./: CMakeLists.txt  README.md
CMakeModules/: Find3rd_party_ros.cmake
etc/: SampleCommunicationController.in.yaml
src/: CMakeLists.txt  SampleCommunicationController.cpp  SampleCommunicationController.h  api.h  lib.cpp
src/states/: CMakeLists.txt  ROSPostureState.cpp  ROSPostureState.h  SampleCommunicationController_Initial.cpp  SampleCommunicationController_Initial.h
tools/: CMakeLists.txt  posture_cli_client.cpp  simple_cli_client.cpp
